docs: how to connect with the JDBC driver (#369)
The JDBC driver works against the server but the README doesn't mention
it, and there are two non-obvious requirements that cost time to work
out:

- `account` has to be in the URL. The driver derives it from the host
otherwise, which fails for `localhost` and produces a confusing "claims
to not accept jdbcUrl" error rather than a connection failure.
- The JVM needs `--add-opens=java.base/java.nio=ALL-UNNAMED` or the
bundled Arrow throws `ExceptionInInitializerError` when the first result
comes back.

Both came up wiring a Spring Boot service's integration tests to
fakesnow via Testcontainers, replacing a Postgres substitute.